--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <img src="./assets/Logo.png" alt=""/>
       </div>
       <ul class="nav-links">
-         <li><a href="#"> My URLs</a></li>
-        <li><a href="#"> Features </a></li>
+         <li><a href="#"> <span class="color-blue"> My URLs </span></a></li>
+        <li><a href="#"> Features  <span class="drop-down-arrow"> <img src="/assets/dropdown arrow.png" alt=""></span></a></li>
         <li><a href="#"> Pricing </a></li>
         <li><a href="#"> Analytics </a></li>
         <li><a href="#"> FAQs</a></li>
       </ul>
       <div class="cta">
-        <p><a href="#">Log in</a></p>
+        <p><a href="#"> <span class="color-blue"> Log in </span></a></p>
         <button class="btn">Try For Free</button>
       </div>
     </nav>
@@ -257,7 +257,7 @@
         <div class="paste-url">
           <button class="paste"> Paste URL here... </button>
           <div class="choose">
-            <button class="choose-domain"> Choose Domain </button>
+            <button class="choose-domain"> Choose Domain <span class="drop-down"> <img src="/assets/blue-drop-down.png" alt=""></span> </button>
             <button class="choose-domain2"> Type Alias here </button>
           </div>
           <div class="trim">
@@ -429,6 +429,27 @@
     </section>
     <!--   END OF PASTE URLS BOX SECTION -->
 
-</body>
+    <footer>
+  <!--FOOTER BACKGROUND IMAGE -->
+      <div class="footer-background">
+    <img src="/assets/last bacground one.png" alt="" class="footer-image-one">
+    <img src="/assets/last background two.png" alt="" class="footer-image-two">
+      </div>
 
+      <div class="logo">
+        <div class="social-media">
+          <img src="/assets/footer Logo sciccors.png" alt="">
+        </div>
+
+<!-- ICON -->
+        <div class="icon">
+          <div> <img src="/assets/i.fi-social-twitter.png" alt=""> </div>
+          <div class="gap"> <img src="/assets/intagram.png" alt=""> </div>
+          <div class="gap"> <img src="/assets/i.fi-social-linkedin.png" alt=""> </div>
+          <div class="gap"> <img src="/assets/i.fi-social-facebook.png" alt=""> </div>
+        </div>
+      </div>
+
+    </footer>
+</body>
 </html>
